--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Compiled class file
 *.class
 
+project/
+
+
 .idea/
 # Log file
 *.log
@@ -19,6 +22,9 @@
 *.zip
 *.tar.gz
 *.rar
+*.sbt
+*.json
+*.csv
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
